# beehive-WELLness

./: .gitattributes  .gitignore  AUDIT.md  C5_ACCESSIBILITY_AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: guards.yml
crates/fat-profile/: Cargo.toml
crates/fat-profile/fixtures/: partial_measurement.json  usda_coconut_oil.json  usda_hemp_hearts_170148.json  usda_salmon.json
crates/fat-profile/src/: lib.rs
crates/food-composition/: Cargo.toml
crates/food-composition/src/: lib.rs
crates/health-vault/: Cargo.toml
crates/health-vault/fixtures/: consent_revoked_synthetic.json  labs_lipid_synthetic.json  med_supplement_synthetic.json  obs_hr_synthetic.json
crates/health-vault/src/: lib.rs
dockets/: FDA-2026-N-7542.md  README.md
grants/: 2026-07-18-L1-surfaces-TIER-R-v2.md  2026-07-18-L1-surfaces-TIER-R.md  2026-07-18-L1-surfaces.md  2026-07-19-L1-surfaces-TIER-R-v3.md  2026-07-19-L1-surfaces-TIER-R-v4.md  2026-07-19-L1-surfaces-TIER-R-v5.md
provenance/: README.md
scripts/: phi-scan.sh  secret-scan.sh
surfaces/: README.md  beehive_wellness_index.html  blOVErai_companion_surface.html  bqueenbee_analytics.html  d12_fat_scan_result.html  module1_hemp_hearts_label_reader.html  module2_fats_label_wont_show.html  module3_portion_reality.html  module4_decide_for_yourself.html
verify/: check-contrast.mjs  contrast-probe.js  verify-l1.sh
