[workspace]
resolver = "2"
members = ["crates/fat-profile", "crates/food-composition", "crates/health-vault"]

# Licensing is decided per crate against the real dependency graph, never blanket.
# The test is the licence of what you LINK, not whether you touch the kernel at all:
#   - fat-profile      — serde only, pins nothing.
#   - food-composition — serde only, pins nothing.
#   - health-vault     — pins ONE kernel crate, `type-bindings`, by rev. That crate is
#                        itself MIT OR Apache-2.0, so health-vault stays permissive.
# A crate that must link an AGPL kernel crate becomes AGPL and pins it by rev then.
#
# (An earlier version of this comment said no kernel crate was pinned here and that
# health-vault defined its own types. That was true when written and went stale the moment
# type-bindings landed — the same defect the C-G audit found in README.md, sitting in a
# third place nobody had looked. Stating the rule instead of the snapshot is what stops it
# going stale again.)

[workspace.package]
edition = "2021"
