[package]
name = "fat-profile"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Pure fatty-acid-profile reader over USDA/CNF food-composition data. Reports what the source measured and marks what it didn't (Measured<T>); no interpolation, no health logic, no intake math. Mock-first (live HTTP behind a trait). Links no kernel crate — cleanly permissive."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
