[package]
name = "health-vault"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "No-PII health-record types with a pseudonymous subject (MIT/Apache SDK edge). Guarantee-spine only until the SOVEREIGN_HEALTH_VAULT spec lands; the FHIR R4-shaped record types build on this without ever adding a PII field."
